--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,10 @@
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
+        "kyslik/column-sortable": "^6.3",
         "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "overtrue/laravel-favorite": "2.0.3"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
