--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "kyslik/column-sortable": "^6.3",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
+        "nesbot/carbon": "^2.35",
         "overtrue/laravel-favorite": "2.0.3"
     },
     "require-dev": {
