--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,14 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.1.3",
+        "php": "^7.2",
         "fideloper/proxy": "^4.0",
         "kyslik/column-sortable": "^6.3",
-        "laravel/framework": "5.8.*",
+        "laravel/framework": "6.11.0",
         "laravel/tinker": "^1.0",
         "nesbot/carbon": "^2.35",
-        "overtrue/laravel-favorite": "2.0.3"
+        "overtrue/laravel-favorite": "2.0.3",
+        "spatie/laravel-google-calendar": "^3.4"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
